@@ -14,6 +14,8 @@
  * Support for Range in zafu. <== TODO: Document
  * Added options to query_parse to ignore unwanted parameters <== TODO: Document
  * Added 'hparams' option to only return Hash parameters from params. <== TODO: Document
+ * Fixed query_parse to convert dates to UTC.
+ * Fixed form preview inside block.
 
 == 1.2.2 2012-08-30
 
